--- a/projects/rosseti/stand2-joinproblem.bak/ansible.cfg
+++ b/projects/rosseti/stand2-joinproblem.bak/ansible.cfg
@@ -1,13 +1,13 @@
 [defaults]
-allow_world_readable_tmpfiles=true
 ask_pass=False
 inventory=inventory
 log_path=/opt/croc/ansible.log
-private_key_file=~/.ssh/ansible-key
-remote_user=ta-admin
+private_key_file=/home/appc/.ssh/croc.rosseti
+remote_user=croc
 timeout=30
-vault_password_file=/opt/croc/a2300089-vaultpass
+vault_password_file=~/vaultpass-rosseti
 host_key_checking = False
+host_key_check = False
 interpreter_python = /usr/bin/python3
 [privilege_escalation]
 become=True
