--- a/projects/rosseti/stand1-printers/ansible.cfg
+++ b/projects/rosseti/stand1-printers/ansible.cfg
@@ -5,7 +5,7 @@ log_path=/opt/croc/ansible.log
 private_key_file=/home/appc/.ssh/croc.rosseti
 remote_user=croc
 timeout=30
-vault_password_file=~/vaultpass-rosseti
+vault_password_file=/opt/croc/rosseti-vaultpass
 host_key_checking = False
 host_key_check = False
 interpreter_python = /usr/bin/python3
