--- a/projects/rosseti/stand1-printers/roles/createvm-zvirt/defaults/main.yml
+++ b/projects/rosseti/stand1-printers/roles/createvm-zvirt/defaults/main.yml
@@ -1,36 +1,44 @@
-# createvm_name:
-# createvm_comment:
-# createvm_description:
-# createvm_memory:
-# createvm_cpu_cores:
-# createvm_cluster:
-# createvm_template:
-# createvm_template_version:
-# createvm_nics:
-# createvm_timezone:
-# createvm_ci_hostname:
-# createvm_ci_username:
-# createvm_ci_userpass:
-# createvm_ci_pubkey:
-# createvm_ci_customscript:
-# createvm_disksize:
-# createvm_tags:
-
-createvm:
-  name:
-  comment:
-  description:
-  memory:
-  cpu_cores:
-  cluster:
-  template:
-  template_version:
-  nics:
-  timezone:
-  ci_hostname:
-  ci_username:
-  ci_userpass:
-  ci_pubkey:
-  ci_customscript:
-  disksize:
-  tags:
+createvm_default:
+  clone: true
+  cluster: CL-OVN
+  disksize: 32GiB
+  disk_format: "raw"
+  dns_search: spo.local
+  dns_servers: "77.88.8.1 8.8.8.8"
+  memory: 1GiB
+  nic:
+    name: eth0
+    network: cl_ovn_vlan_76
+    profile_name: cl_ovn_vlan_76
+  nic_boot_protocol: dhcp
+  template: tmp-alt-p10-ws
+  template_version: 0
+  timezone: Europe/Moscow
+  startvm: false
+  waitstart: false
+  username: croc
+  userpass: $6$Petbacyun6$b2zDGC1IU1kAFV8V5UsUz0pxwuG3wO0WRUzjkxt/1Cpnw/5fyz6d2JaYfvAe82m/ox7Tv/jYyqHh17yWiNnjq1
+  pubkey: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFZEAqy2zenQVj0k52Tq5R+h+/pbN9Rmh1EFevUkEsBO croc"
+  customscript: |
+    write_files:
+    - path: /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg
+      content: |
+        network: {config: disabled}
+      permissions: '0644'
+      owner: root:root
+    - path: /etc/issue
+      append: true
+      content: |
+        \4
+        \6
+    - path: /root/cloudinit-disable.sh
+      content: |
+        #!/bin/bash
+        mv /etc/netplan/50-cloud-init.yaml /etc/netplan/01-static.yaml
+        systemctl disable cloud-config.service cloud-final.service cloud-init.service cloud-init-local.service
+        touch /root/cloudinit-disable.done
+        echo "disabled by cloudinit custom script" > /etc/cloud/cloud-init.disabled
+      permissions: '0644'
+      owner: root:root
+    runcmd:
+    - [sh, /root/cloudinit-disable.sh]
