--- a/mikrotik-automation/ansible/inventory/inventory.yml
+++ b/mikrotik-automation/ansible/inventory/inventory.yml
@@ -2,7 +2,7 @@ site_engspo:
   hosts:
     rt1: { ansible_host: 172.26.76.217 }
 
-site_aratner-new:
+site_mynb:
   hosts:
     rt0: { ansible_host: 172.23.95.46 }
 
