--- a/mikrotik-automation/ansible/ansible.cfg
+++ b/mikrotik-automation/ansible/ansible.cfg
@@ -6,9 +6,14 @@ private_key_file=/home/appc/.ssh/croc
 remote_user=croc
 timeout=30
 vault_password_file=/opt/croc/croc-vaultpass
+# remote_tmp = /tmp
 host_key_checking = False
 host_key_check = False
 interpreter_python = /usr/bin/python3
+# callbacks_enabled = timer, profile_tasks, profile_roles
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
 [privilege_escalation]
 become=True
 [persistent_connection]
