--- a/mikrotik-automation/ansible/pb-rt.yml
+++ b/mikrotik-automation/ansible/pb-rt.yml
@@ -1,35 +1,157 @@
 ---
 - name: Configure rt
   gather_facts: false
-  hosts: role_rt
+  hosts: rt2
+  vars:
+    routeros_interface_ethernet:
+      - { defaultname: ether1, name: ether1-WAN, lists: [WAN]}
+      - { defaultname: ether2, name: ether2-LAN-212, mtu: 1442, lists: [LAN]}
+      - { defaultname: ether3, name: ether2-LAN-213, mtu: 1442, lists: [LAN]}
+      - { defaultname: ether4, name: ether2-LAN-214, mtu: 1442, lists: [LAN]}
+      - { defaultname: ether5, name: ether2-LAN-215, mtu: 1442, lists: [LAN]}
+
+    routeros_interface_lists:
+      - WAN
+      - LAN
+
+    routeros_service:
+      - { name: telnet, disabled: "yes" }
+      - { name: ftp, disabled: "yes" }
+      - { name: www, disabled: "yes" }
+      - { name: api, disabled: "yes" }
+      - { name: api-ssl, disabled: "yes" }
+
+    routeros_firewall_addresslist:
+      - name: trusted
+        addresses:
+          - 10.10.12.51/32
+          - 172.28.208.0/22
+          - 172.28.212.0/22
+
+    routeros_timezone: Europe/Moscow
+
+    routeros_dns_servers:
+      - 8.8.8.8
+      - 77.88.8.1
+
+    routeros_ntp_servers:
+      - ru.pool.ntp.org
+      - time.windows.com
+
   tasks:
-    # - ansible.builtin.debug: "var=ansible_network_os"
+    - name: /interface/list/add
+      community.routeros.command:
+        commands: >
+          /interface list add
+          name={{ interfacelist }}
+      loop: "{{ routeros_interface_lists }}"
+      loop_control:
+        loop_var: interfacelist
+        label: "{{ interfacelist }}"
 
-    # - name: Display resource statistics (routeros)
-    #   community.routeros.command:
-    #     commands: /system resource print
-    #   register: routeros_resources
-    #   when: ansible_network_os == 'community.routeros.routeros'
+    - name: /interface/ethernet/set
+      community.routeros.command:
+        commands: >
+          /interface ethernet set
+          [ find default-name={{ interface.defaultname }} ]
+          name={{ interface.name | default(interface.defaultname) }}
+          {% if interface.mtu is defined %}
+          mtu={{ interface.mtu }}
+          {% endif %}
+      loop: "{{ routeros_interface_ethernet }}"
+      loop_control:
+        loop_var: interface
+        label: "{{ interface.defaultname }}"
 
-    # - ansible.builtin.debug: "var=routeros_resources.stdout_lines"
+    - name: /interface/list/member/add
+      community.routeros.command:
+        commands: >
+          {
+          {% for list in interface.lists %}
+          /interface list member add
+          list={{ list | default('') }}
+          interface={{ interface.name | default(interface.defaultname) }};
+          {% endfor %}
+          }
+      loop: "{{ routeros_interface_ethernet }}"
+      loop_control:
+        loop_var: interface
+        label: "{{ interface.defaultname }} {{ interface.lists | default('') }} "
+      when: interface.lists is defined
 
-    # - name: Collect all facts from the device
-    #   community.routeros.facts:
-    #     gather_subset: all
+    - name: /ip/service
+      community.routeros.command:
+        commands:
+          /ip service set {{ service.name }} disabled={{ service.disabled }}
+      loop: "{{ routeros_service }}"
+      loop_control:
+        loop_var: service
+        label: "{{ service.name }}"
 
-    # - ansible.builtin.debug: "var=hostvars"
+    - name: /ip/firewall/address-list
+      community.routeros.command:
+        commands: >
+          {
+          {% for address in addresslist.addresses %}
+          /ip firewall address-list add
+          list={{ addresslist.name }}
+          address={{ address }};
+          {% endfor %}
+          }
+      loop: "{{ routeros_firewall_addresslist }}"
+      loop_control:
+        loop_var: addresslist
+        label: "{{ addresslist.name }}"
+    - debug: 
+        var: routeros_dns_servers | join(',')
+    - name: /ip/dns
+      community.routeros.command:
+        commands: >
+          /ip dns set allow-remote-requests=yes servers={{ routeros_dns_servers | join(',') | string }};
 
-    # - name: Collect only the config and default facts
-    #   community.routeros.facts:
-    #     gather_subset:
-    #       - config
+    - name: /system/ntp/client/servers
+      community.routeros.command:
+        commands: >
+          {
+          {% for server in routeros_ntp_servers %}
+          /system ntp client servers add address={{ server }};
+          {% endfor %}
+          }
 
-    # - name: Do not collect hardware facts
-    #   community.routeros.facts:
-    #     gather_subset:
-    #       - "!hardware"
+    - name: /ip/firewall flush all
+      community.routeros.command:
+        commands:
+          - /ip firewall filter remove [find dynamic=no]
+          - /ip firewall nat remove [find dynamic=no]
+          - /ip firewall mangle remove [find dynamic=no]
+          - /ip firewall raw remove [find dynamic=no]
 
-    - name: Retrieve facts
-      community.routeros.facts:
-    - ansible.builtin.debug:
-        msg: "First IP address: {{ ansible_net_all_ipv4_addresses[0] }}"
+    - name: /ip/firewall standard rules
+      community.routeros.command:
+        commands:
+          - /ip firewall filter add action=accept chain=input comment="E, R" connection-state=established,related
+          - /ip firewall filter add action=accept chain=input protocol=icmp
+          - /ip firewall filter add action=accept chain=input connection-state=new src-address-list=trusted
+          - /ip firewall filter add action=accept chain=forward comment="E, R" connection-state=established,related
+          - /ip firewall filter add action=accept chain=forward comment=DNATed connection-nat-state=dstnat connection-state=new in-interface-list=WAN
+          - /ip firewall filter add action=accept chain=forward comment=lan_internetallow connection-state=new out-interface-list=WAN src-address-list=lan_internetallow
+          - /ip firewall filter add action=accept chain=forward connection-state=new dst-address-list=trusted src-address-list=trusted
+          - /ip firewall filter add action=accept chain=forward connection-state="" dst-address-list=trusted log=yes log-prefix=_FW_T_ src-address-list=trusted
+          - /ip firewall filter add action=accept chain=output comment="E, R" connection-state=established,related
+          - /ip firewall filter add action=accept chain=output connection-state=new
+          - /ip firewall filter add action=drop chain=input log=yes log-prefix=_D_I_
+          - /ip firewall filter add action=drop chain=output log=yes log-prefix=_D_O_
+          - /ip firewall filter add action=drop chain=forward log=yes log-prefix=_D_F_
+          - /ip firewall nat add action=accept chain=srcnat src-address-list=notnat_src
+          - /ip firewall nat add action=accept chain=srcnat dst-address-list=notnat_dst
+          - /ip firewall nat add action=masquerade chain=srcnat out-interface-list=WAN
+
+    - name: System settings
+      community.routeros.command:
+        commands:
+          - /ipv6 settings set disable-ipv6=yes
+          - /ip ssh set forwarding-enabled=both
+          - /system clock set time-zone-name={{ routeros_timezone }}
+          - /system identity set name={{ inventory_hostname }}
+          - /system ntp client set enabled=yes
+          - /system ntp server set enabled=yes
