--- a/projects/nikiet/stand1/vars/createvms-zvirt.yml
+++ b/projects/nikiet/stand1/vars/createvms-zvirt.yml
@@ -1,5 +1,5 @@
 createvm_default:
-  clone: true
+  clone: false
   cluster: CL-OVN
   disksize: 32GiB
   disk_format: "raw"
@@ -11,13 +11,13 @@ createvm_default:
     network: aratner-212
     profile_name: aratner-212
   nic_boot_protocol: dhcp
-  template: tmp-alse-p10-ws
+  template: tmp-alse-1.7.6uu2-max
   template_version: 0
   timezone: Europe/Moscow
   startvm: false
   waitstart: false
   username: "{{ ansible_user }}"
-  userpass: "{{ amsible_password }}"
+  userpass: "{{ ansible_password }}"
   pubkey: "{{ ansible_ssh_public_key }}"
   customscript: |
     write_files:
@@ -44,33 +44,14 @@ createvm_default:
     - [sh, /root/cloudinit-disable.sh]
 
 newvms:
-  - {project: nikiet_stand1, site: msk, ro}
-  - project: aratner
-    site: alt
-    role: ws
-    suffix: 1
-    cpu_cores: 4
-    memory: 6GiB
-    disksize: 40GiB
-    storage_domain: fc_dc_ovn_01
-    disk_format: "cow"
-    ipv4:
-      method: static
-      address: 172.26.76.227
-      netmask: 255.255.255.0
-      gateway: 172.26.76.1
-  - name: aratner_altws2
-    clone: false
-    hostname: altws2
-    project: aratner
-    site: alt
-    role: ws
-    cpu_cores: 4
-    memory: 6GiB
-    disksize: 40GiB
-    disk_format: "cow"
-    ipv4:
-      method: static
-      address: 172.26.76.228
-      netmask: 255.255.255.0
-      gateway: 172.26.76.1
+- { project: nikietstand1, site: msk1, role: dc, suffix: 1, cpu_cores: 8, memory: 16GiB, disk1size: 50GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.11, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: dc, suffix: 2, cpu_cores: 8, memory: 16GiB, disk1size: 50GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.12, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: dhcp, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 30GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.13, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: repo, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 100GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.14, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: pxe, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 30GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.15, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: mon, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 30GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.16, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: audit, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 30GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.17, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: ps, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 30GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.18, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: fs, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 30GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.19, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: dmz, role: apt, suffix: 1, cpu_cores: 2, memory: 2GiB, disk1size: 100GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.20, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
+- { project: nikietstand1, site: msk1, role: ws, suffix: 1, cpu_cores: 4, memory: 8GiB, disk1size: 100GiB, disk1_domain: fc_dc_ovn_01, disk_format: cow, ipv4: { method: static, address: 172.28.212.51, netmask: 255.255.255.0, gateway: 172.28.212.1, }}
