--- a/projects/nikiet/stand1/inventory/group_vars/all/ansible.yml
+++ b/projects/nikiet/stand1/inventory/group_vars/all/ansible.yml
@@ -1,6 +1,6 @@
 ansible_python_interpreter: /usr/bin/python3
-ansible_ssh_private_key_file: ~/.ssh/k2admin.nikiet
-ansible_ssh_public_key: "{{ lookup( 'file', '~/.ssh/k2admin.nikiet.pub' ) }} "
+ansible_ssh_private_key_file: .ssh/k2admin.nikiet
+ansible_ssh_public_key: "{{ lookup( 'file', '.ssh/k2admin.nikiet.rsa.pub' ) }} "
 ansible_user: k2admin
 #ansible-vault encrypt_string --stdin-name 'ansible_password'
 ansible_password: !vault |
