--- a/projects/nikiet/stand1/inventory/stand1.yml
+++ b/projects/nikiet/stand1/inventory/stand1.yml
@@ -1,15 +1,15 @@
 stand1: 
   hosts:
-    aldmsk1dc1: { ansible_host: 172.28.212.11 }
-    aldmsk1dc2: { ansible_host: 172.28.212.12 }
-    aldmsk1dhcp1: { ansible_host: 172.28.212.13 }
-    aldmsk1repo1: { ansible_host: 172.28.212.14 }
-    aldmsk1pxe1: { ansible_host: 172.28.212.15 }
-    aldmsk1mon1: { ansible_host: 172.28.212.16 }
-    aldmsk1audit1: { ansible_host: 172.28.212.17 }
-    aldmsk1ps1: { ansible_host: 172.28.212.18 }
-    aldmsk1fs1: { ansible_host: 172.28.212.19 }
-    alddmzapt1: { ansible_host: 172.28.212.20 }
+    msk1dc1: { ansible_host: 172.28.212.11 }
+    msk1dc2: { ansible_host: 172.28.212.12 }
+    msk1dhcp1: { ansible_host: 172.28.212.13 }
+    msk1repo1: { ansible_host: 172.28.212.14 }
+    msk1pxe1: { ansible_host: 172.28.212.15 }
+    msk1mon1: { ansible_host: 172.28.212.16 }
+    msk1audit1: { ansible_host: 172.28.212.17 }
+    msk1ps1: { ansible_host: 172.28.212.18 }
+    msk1fs1: { ansible_host: 172.28.212.19 }
+    dmzapt1: { ansible_host: 172.28.212.20 }
 
 role_dc:
   children:
