--- a/projects/nikiet/stand1/.ssh/config
+++ b/projects/nikiet/stand1/.ssh/config
@@ -6,7 +6,7 @@ Host 172.26.76.218
 
 Host 172.28.212.*
 	ProxyJump k2admin@172.26.76.218
-	IdentityFile .ssh/k2admin.nikiet.rsa
-	# ControlPath .ssh/controlmasters/%r@%h:%p
+	IdentityFile ~/.ssh/k2admin.nikiet.rsa
+	# ControlPath ~/.ssh/controlmasters/%r@%h:%p
 	ControlMaster auto
 	ControlPersist 10m
